k8s/base/java-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: platform-delivery-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: platform-delivery-lab/java:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3009
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 96Mi
            limits:
              cpu: 150m
              memory: 192Mi
