k8s/base/go-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app
  namespace: platform-delivery-lab
spec:
  selector:
    app: go-app
  ports:
    - name: http
      port: 80
      targetPort: http
