k8s/base/java-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app
  namespace: platform-delivery-lab
spec:
  selector:
    app: java-app
  ports:
    - name: http
      port: 80
      targetPort: http
