k8s/base/node-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: platform-delivery-lab
spec:
  selector:
    app: node-app
  ports:
    - name: http
      port: 80
      targetPort: http
