k8s/base/php-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app
  namespace: platform-delivery-lab
spec:
  selector:
    app: php-app
  ports:
    - name: http
      port: 80
      targetPort: http
